todo: testing for functions with vector parameters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(Dual)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Dual main.cpp Dual.h)
+add_executable(Dual main.cpp Dual.h
+        Clock.h)
